Fix: Various size adjustments for contacts section tablet view.

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1149,7 +1149,6 @@ header {
   }
 
   .contact__container {
-    height: 70vh;
     margin-top: 1rem;
   }
 
@@ -1164,9 +1163,22 @@ header {
     padding: 1rem;
   }
 
+  .contact__content-message {
+    height: 300px;
+  }
+
+  .contact__button {
+    margin-top: 1rem;
+    font-size: var(--large-font);
+  }
+
+  .contact__socials {
+    margin-top: -5rem;
+  }
+
   .contact__socials-links {
     gap: 3rem;
-    margin-top: 1.25rem;
+    margin-top: 1.5rem;
   }
 
   .footer__container {
